--- a/third/db_test.ipynb
+++ b/third/db_test.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "59c4c4ae-22bc-49e9-b87f-46997cf887b5",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
        "1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,11 @@
    "id": "daafb41e-f5a8-4a21-937c-4467492a06f3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with c.cursor() as cursor:\n",
+    "    sql = \"SELECT * FROM cities;\"\n",
+    "    cursor.execute(sql)"
+   ]
   }
  ],
  "metadata": {
